[package]
name = "auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.29.0"
# Use compatible versions that work together
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-sdk = "1.18.0"
spl-token = "4.0.0"
tokio = "1.0"