[package]
name = "listing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "listing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.1.2"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
borsh = "0.10.0"

[dev-dependencies]
solana-sdk = "1.17.0"
tokio = { version = "1.0", features = ["full"] }

# Required for cross-program invocation with marketplace
[dependencies.marketplace]
path = "../marketplace"
features = ["cpi"]
